--- a/Bayes Classifier.ipynb
+++ b/Bayes Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2bb48d01",
+   "id": "31054730",
    "metadata": {},
    "source": [
     "# Notebook Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "e9da035b",
+   "execution_count": 1,
+   "id": "7251eeb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7276ce5",
+   "id": "0bfea5d7",
    "metadata": {},
    "source": [
     "# Constants"
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "0c49dd6b",
+   "execution_count": 2,
+   "id": "7245c8d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82b62fe5",
+   "id": "48b98332",
    "metadata": {},
    "source": [
     "# Reading Files"
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "dfb67c4e",
+   "execution_count": 3,
+   "id": "a14d462d",
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9f6d7cff",
+   "execution_count": 4,
+   "id": "c37d563d",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "'utf-8'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,15 +180,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1141799",
+   "id": "7a55e9fb",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "80e4ead3",
+   "execution_count": 5,
+   "id": "f3e784ae",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "933899bc",
+   "id": "5ca2b523",
    "metadata": {},
    "source": [
     "# Generator Functions"
@@ -252,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fe017299",
+   "execution_count": 6,
+   "id": "21b135ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,8 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "fe4566dc",
+   "execution_count": 7,
+   "id": "79a851fe",
    "metadata": {},
    "outputs": [
     {
@@ -283,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d0d874ae",
+   "execution_count": 8,
+   "id": "6c5555e8",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d13e5db",
+   "id": "70c2b7b7",
    "metadata": {},
    "source": [
     "## Email body extraction"
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c6cf0cd3",
+   "execution_count": 9,
+   "id": "6147fb49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "175729b6",
+   "execution_count": 10,
+   "id": "91f7e9c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "e79ea9b5",
+   "execution_count": 11,
+   "id": "8fc6d1ff",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "00033.9babb58d9298daa2963d4f514193d7d6         1  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,8 +448,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b8ce6ea5",
+   "execution_count": 12,
+   "id": "0cb0cb44",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "(1898, 2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,8 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "29dcff52",
+   "execution_count": 13,
+   "id": "24eb6b18",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        " (3901, 2))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,8 +505,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "11a2ecfc",
+   "execution_count": 14,
+   "id": "e1abf1c2",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "00033.9babb58d9298daa2963d4f514193d7d6         1  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,8 +600,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "df785fa3",
+   "execution_count": 15,
+   "id": "80a1ea60",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "00747.352d424267d36975a7b40b85ffd0885e         0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23213457",
+   "id": "91891b86",
    "metadata": {},
    "source": [
     "# Data Cleaning: Checking for Missing Values"
@@ -694,8 +694,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "7d6b7749",
+   "execution_count": 16,
+   "id": "b35c93d2",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "False"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,8 +716,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "b70bc3d6",
+   "execution_count": 17,
+   "id": "4a49e8e0",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,8 +737,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "0978d120",
+   "execution_count": 18,
+   "id": "621606c6",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "str"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,8 +758,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "5a2399ba",
+   "execution_count": 19,
+   "id": "791d03ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,8 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "f0854033",
+   "execution_count": 20,
+   "id": "e13e4b35",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,8 +789,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "f1bab396",
+   "execution_count": 21,
+   "id": "f7f5d2c7",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,8 +811,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "c49398cb",
+   "execution_count": 22,
+   "id": "c3930af0",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
        "3"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,8 +832,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "d37ccc93",
+   "execution_count": 23,
+   "id": "0e6da204",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952e0af7",
+   "id": "12377531",
    "metadata": {},
    "source": [
     "## Locate empty emails"
@@ -862,8 +862,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "77b19d02",
+   "execution_count": 24,
+   "id": "5273a31a",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,8 +883,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "f41a90a1",
+   "execution_count": 25,
+   "id": "703b53dd",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "Index(['cmds', 'cmds', 'cmds'], dtype='object')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,8 +905,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "d6979bc1",
+   "execution_count": 26,
+   "id": "6e08b733",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,8 +926,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "ee7c2492",
+   "execution_count": 27,
+   "id": "73043ab5",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
        "00978.6ee6ee70e9126bba327faa762d37b3f9         0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,9 +997,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "040fee5a",
+   "metadata": {},
+   "source": [
+    "# Remove System File Entries from Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "266d4839",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5796, 2)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2855e4f",
+   "metadata": {},
+   "source": [
+    "# Add Document IDs to Track Emails in Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f61d229a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document_ids = range(0, len(data.index))\n",
+    "data['DOC_ID'] = document_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "661a2225",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MESSAGE</th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>FILE_NAME</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DOC_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00249.5f45607c1bffe89f60ba1ec9f878039a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ATTENTION: This is a MUST for ALL Computer Use...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00373.ebe8670ac56b04125c25100a36ab0510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>This is a multi-part message in MIME format.\\n...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00214.1367039e50dc6b7adb0f2aa8aba83216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00210.050ffd105bd4e006771ee63cabc59978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>This is the bottom line.  If you can GIVE AWAY...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00033.9babb58d9298daa2963d4f514193d7d6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  MESSAGE  CATEGORY  \\\n",
+       "DOC_ID                                                                \n",
+       "0       Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...         1   \n",
+       "1       ATTENTION: This is a MUST for ALL Computer Use...         1   \n",
+       "2       This is a multi-part message in MIME format.\\n...         1   \n",
+       "3       IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...         1   \n",
+       "4       This is the bottom line.  If you can GIVE AWAY...         1   \n",
+       "\n",
+       "                                     FILE_NAME  \n",
+       "DOC_ID                                          \n",
+       "0       00249.5f45607c1bffe89f60ba1ec9f878039a  \n",
+       "1       00373.ebe8670ac56b04125c25100a36ab0510  \n",
+       "2       00214.1367039e50dc6b7adb0f2aa8aba83216  \n",
+       "3       00210.050ffd105bd4e006771ee63cabc59978  \n",
+       "4       00033.9babb58d9298daa2963d4f514193d7d6  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['FILE_NAME'] = data.index\n",
+    "data.set_index('DOC_ID', inplace=True)\n",
+    "data.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd16e9eb",
+   "id": "051d2788",
    "metadata": {},
    "outputs": [],
    "source": []
