--- a/Bayes Classifier.ipynb
+++ b/Bayes Classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "7251eeb5",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,11 @@
     "from os.path import join\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -33,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "7245c8d2",
    "metadata": {},
    "outputs": [],
@@ -1153,7 +1158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a85daa4",
+   "id": "edb84be7",
    "metadata": {},
    "source": [
     "# Save to File using Pandas"
@@ -1161,8 +1166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "87cfa09c",
+   "execution_count": 31,
+   "id": "cd76480c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87627f7c",
+   "id": "26f77fbb",
    "metadata": {},
    "source": [
     "# Number of Spam Mssages Visualized"
@@ -1179,8 +1184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "adc42c87",
+   "execution_count": 32,
+   "id": "815bd545",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1196,7 @@
        "Name: CATEGORY, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,8 +1207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "8cd3035e",
+   "execution_count": 33,
+   "id": "2801dc39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,8 +1218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "cfa5eceb",
+   "execution_count": 34,
+   "id": "dc50e89f",
    "metadata": {},
    "outputs": [
     {
@@ -1239,8 +1244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "4d83fdce",
+   "execution_count": 35,
+   "id": "1c565f42",
    "metadata": {},
    "outputs": [
     {
@@ -1268,15 +1273,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae20202c",
+   "id": "8a375f35",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "8cae2dfb",
+   "execution_count": 36,
+   "id": "41b8d5eb",
    "metadata": {},
    "outputs": [
     {
@@ -1309,15 +1314,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cfba03e",
+   "id": "62101d78",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "9a2588db",
+   "execution_count": 37,
+   "id": "3ac71ccf",
    "metadata": {},
    "outputs": [
     {
@@ -1349,9 +1354,458 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "967a72c6",
+   "metadata": {},
+   "source": [
+    "# Natural Language Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26707ea1",
+   "metadata": {},
+   "source": [
+    "### Text Pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "c9e3ea2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'all work and no play makes jack a dull boy.'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert to lower case\n",
+    "msg = 'All work and no play makes Jack a dull boy.'\n",
+    "msg = msg.lower()\n",
+    "msg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3cd59cb",
+   "metadata": {},
+   "source": [
+    "### Download the NLTK Resources (Tokenizer * Stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d1d743a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/brendan/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bd93fa00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/brendan/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3644511c",
+   "metadata": {},
+   "source": [
+    "## Tokenizing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a729ca90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['all', 'work', 'and', 'no', 'play', 'makes', 'jack', 'a', 'dull', 'boy', '.']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = 'All work and no play makes Jack a dull boy.'\n",
+    "word_tokenize(msg.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c5ba6c",
+   "metadata": {},
+   "source": [
+    "## Removing Stop Words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d40ed95a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['i',\n",
+       "  'me',\n",
+       "  'my',\n",
+       "  'myself',\n",
+       "  'we',\n",
+       "  'our',\n",
+       "  'ours',\n",
+       "  'ourselves',\n",
+       "  'you',\n",
+       "  \"you're\",\n",
+       "  \"you've\",\n",
+       "  \"you'll\",\n",
+       "  \"you'd\",\n",
+       "  'your',\n",
+       "  'yours',\n",
+       "  'yourself',\n",
+       "  'yourselves',\n",
+       "  'he',\n",
+       "  'him',\n",
+       "  'his',\n",
+       "  'himself',\n",
+       "  'she',\n",
+       "  \"she's\",\n",
+       "  'her',\n",
+       "  'hers',\n",
+       "  'herself',\n",
+       "  'it',\n",
+       "  \"it's\",\n",
+       "  'its',\n",
+       "  'itself',\n",
+       "  'they',\n",
+       "  'them',\n",
+       "  'their',\n",
+       "  'theirs',\n",
+       "  'themselves',\n",
+       "  'what',\n",
+       "  'which',\n",
+       "  'who',\n",
+       "  'whom',\n",
+       "  'this',\n",
+       "  'that',\n",
+       "  \"that'll\",\n",
+       "  'these',\n",
+       "  'those',\n",
+       "  'am',\n",
+       "  'is',\n",
+       "  'are',\n",
+       "  'was',\n",
+       "  'were',\n",
+       "  'be',\n",
+       "  'been',\n",
+       "  'being',\n",
+       "  'have',\n",
+       "  'has',\n",
+       "  'had',\n",
+       "  'having',\n",
+       "  'do',\n",
+       "  'does',\n",
+       "  'did',\n",
+       "  'doing',\n",
+       "  'a',\n",
+       "  'an',\n",
+       "  'the',\n",
+       "  'and',\n",
+       "  'but',\n",
+       "  'if',\n",
+       "  'or',\n",
+       "  'because',\n",
+       "  'as',\n",
+       "  'until',\n",
+       "  'while',\n",
+       "  'of',\n",
+       "  'at',\n",
+       "  'by',\n",
+       "  'for',\n",
+       "  'with',\n",
+       "  'about',\n",
+       "  'against',\n",
+       "  'between',\n",
+       "  'into',\n",
+       "  'through',\n",
+       "  'during',\n",
+       "  'before',\n",
+       "  'after',\n",
+       "  'above',\n",
+       "  'below',\n",
+       "  'to',\n",
+       "  'from',\n",
+       "  'up',\n",
+       "  'down',\n",
+       "  'in',\n",
+       "  'out',\n",
+       "  'on',\n",
+       "  'off',\n",
+       "  'over',\n",
+       "  'under',\n",
+       "  'again',\n",
+       "  'further',\n",
+       "  'then',\n",
+       "  'once',\n",
+       "  'here',\n",
+       "  'there',\n",
+       "  'when',\n",
+       "  'where',\n",
+       "  'why',\n",
+       "  'how',\n",
+       "  'all',\n",
+       "  'any',\n",
+       "  'both',\n",
+       "  'each',\n",
+       "  'few',\n",
+       "  'more',\n",
+       "  'most',\n",
+       "  'other',\n",
+       "  'some',\n",
+       "  'such',\n",
+       "  'no',\n",
+       "  'nor',\n",
+       "  'not',\n",
+       "  'only',\n",
+       "  'own',\n",
+       "  'same',\n",
+       "  'so',\n",
+       "  'than',\n",
+       "  'too',\n",
+       "  'very',\n",
+       "  's',\n",
+       "  't',\n",
+       "  'can',\n",
+       "  'will',\n",
+       "  'just',\n",
+       "  'don',\n",
+       "  \"don't\",\n",
+       "  'should',\n",
+       "  \"should've\",\n",
+       "  'now',\n",
+       "  'd',\n",
+       "  'll',\n",
+       "  'm',\n",
+       "  'o',\n",
+       "  're',\n",
+       "  've',\n",
+       "  'y',\n",
+       "  'ain',\n",
+       "  'aren',\n",
+       "  \"aren't\",\n",
+       "  'couldn',\n",
+       "  \"couldn't\",\n",
+       "  'didn',\n",
+       "  \"didn't\",\n",
+       "  'doesn',\n",
+       "  \"doesn't\",\n",
+       "  'hadn',\n",
+       "  \"hadn't\",\n",
+       "  'hasn',\n",
+       "  \"hasn't\",\n",
+       "  'haven',\n",
+       "  \"haven't\",\n",
+       "  'isn',\n",
+       "  \"isn't\",\n",
+       "  'ma',\n",
+       "  'mightn',\n",
+       "  \"mightn't\",\n",
+       "  'mustn',\n",
+       "  \"mustn't\",\n",
+       "  'needn',\n",
+       "  \"needn't\",\n",
+       "  'shan',\n",
+       "  \"shan't\",\n",
+       "  'shouldn',\n",
+       "  \"shouldn't\",\n",
+       "  'wasn',\n",
+       "  \"wasn't\",\n",
+       "  'weren',\n",
+       "  \"weren't\",\n",
+       "  'won',\n",
+       "  \"won't\",\n",
+       "  'wouldn',\n",
+       "  \"wouldn't\"],\n",
+       " list)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stopwords.words('english'), type(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "58f8ff99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7a4a071a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4ae099ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found it!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'this' in stop_words: print('Found it!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "6f9bac25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'hello' in stop_words: print('Found it!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b67c03f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nope. Not in here\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print out Nope not in Here if the word not contain in stop words\n",
+    "if 'hello' not in stop_words: print('Nope. Not in here')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "203a67bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['work', 'play', 'makes', 'jack', 'dull', 'boy', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = 'All work and no play makes Jack a dull boy. To be or not to be'\n",
+    "words = word_tokenize(msg.lower())\n",
+    "\n",
+    "filtered_words = []\n",
+    "\n",
+    "for word in words:\n",
+    "    if word not in stop_words:\n",
+    "        filtered_words.append(word)\n",
+    "print(filtered_words)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6343a296",
+   "id": "27a3d548",
    "metadata": {},
    "outputs": [],
    "source": []
